--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,7 @@ body {
 #drive {
   width: max(80%, 20%);
   /* background-image: url("https://wallpapers.com/images/hd/macbook-pro-firewatch-sunrise-oei9rpkmlhhabaay.jpg"); */
-  background-image: url("/assets/img/indexbg.webp");
+  background-image: url("../img/indexbg.webp");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
@@ -52,25 +52,43 @@ header {
   cursor: pointer;
   /* backdrop-shadow: 0 0 20px #000; */
   filter: drop-shadow(0 0 10px #000);
-  padding-top: 1em;
+  /* padding-top: 1em; */
 }
-
-#drive header label a {
-  padding: 3px;
-  text-decoration: none;
-  color: #fff;
-  font-size: 1.75rem;
-  font-weight: 700;
-  text-align: center;
-  text-transform: uppercase;
-  letter-spacing: 2px;
+.handwriting {
+  /* width: 16rem; */
+  /* height: 5rem; */
+  transition: all 4s ease;
+  transition-delay: 3s;
+  /* pointer-events: none; */
+  background: transparent !important;
+  margin: 10px;
 }
-
-#drive header label a:hover {
-  color: #000;
-  letter-spacing: 5px;
-  /* text-decoration: underline; */
-  transition: all 200ms ease-in-out;
+.handwriting .purna-svg {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transform: translate(-5%);
+  background: transparent !important;
+}
+.handwriting .purna-svg .text {
+  stroke: #000;
+  stroke-dasharray: 9000;
+  stroke-dashoffset: 9000;
+  -webkit-animation: animate 5s linear 1 forwards;
+  animation: animate-text 5s linear 1 forwards;
+}
+.handwriting .purna-svg .text:hover {
+  stroke: #000;
+}
+@-webkit-keyframes animate-text {
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+@keyframes animate-text {
+  to {
+    stroke-dashoffset: 0;
+  }
 }
 
 #drive form {
