--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -3,7 +3,23 @@
 :root {
   font-size: 10px;
 }
-
+::-webkit-scrollbar {
+  width: 0.75vw;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #8b8f8b;
+  transition: 0.5s ease-in-out;
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: #535353;
+}
+::-webkit-scrollbar-track {
+  background-color: #fff;
+}
+::selection {
+  background-color: #252525;
+  color: #fff;
+}
 *,
 *::before,
 *::after {
@@ -11,28 +27,26 @@
 }
 
 body {
-  min-height: 100vh;
   background-color: #fafafa;
 }
 
 .gallery-collection {
-  max-width: 130rem;
+  /* max-width: 130rem; */
+  max-width: 70%;
   margin: 0 auto;
-  padding: 0 2rem 2rem;
+  /* padding: 0 2rem 2rem; */
 }
 
 .heading {
   font-family: "Montserrat", Arial, sans-serif;
   font-size: 4rem;
   font-weight: 500;
-  line-height: 1.5;
+  /* line-height: 1.5; */
   text-align: center;
-  padding: 3.5rem 0;
+  padding: 1rem 0;
+  margin-bottom: 0;
+  /* margin: -20px 0; */
   color: #1a1a1a;
-}
-
-.heading span {
-  display: block;
 }
 
 .gallery {
@@ -42,8 +56,7 @@ body {
 }
 
 .gallery-item {
-  flex: 1 0 24rem;
-  margin: 1rem;
+  /* flex: 1 0 24rem; */
   box-shadow: 0.3rem 0.4rem 0.4rem rgba(0, 0, 0, 0.4);
   overflow: hidden;
 }
@@ -51,11 +64,11 @@ body {
 .gallery-item img,
 .gallery-image {
   display: block;
-  width: 50%;
-  /* height: 100%; */
+  width: 100%;
   object-fit: cover;
   transition: transform 400ms ease-out;
-  /* z-index: -1; */
+  z-index: 0;
+  /* overflow: hidden; */
 }
 
 .gallery-item img:hover,
@@ -63,12 +76,6 @@ body {
   transform: scale(1.15);
 }
 
-.gallery-item a {
-  display: inline-block;
-  font-size: 3rem;
-  transform: translateY(-50px);
-  text-align: center;
-}
 @supports (display: grid) {
   .gallery {
     display: grid;
@@ -79,5 +86,75 @@ body {
   .gallery,
   .gallery-item {
     margin: 0;
+  }
+}
+
+.gallery-photos {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transform: translate(0, -50px);
+}
+
+.img-download,
+.img-delete {
+  font-family: "Montserrat", Arial, sans-serif;
+  padding: 10px 20px;
+  margin: 0 20px;
+  font-size: 1.5em;
+  font-weight: bold;
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  border: none;
+  transition: 0.2s ease-in;
+  cursor: pointer;
+  z-index: 1;
+}
+.img-download {
+  background: #008000;
+  color: #fff;
+}
+.img-download:hover {
+  background-color: #fff;
+  outline: solid 2px #008000;
+  color: #008000;
+  transform: scale(1.1);
+  box-shadow: 1px 7px 43px 15px rgba(0, 139, 16, 0.85);
+}
+.img-delete {
+  color: #ff0000;
+  background: transparent;
+  outline: solid 2px #ff0000;
+}
+.img-delete:hover {
+  background: #fff;
+  color: #ff0000;
+  transform: scale(1.1);
+  box-shadow: 1px 7px 43px 15px rgba(139, 0, 0, 0.85);
+}
+.img-download:active,
+.img-delete:active {
+  transform: scale(0.9);
+}
+
+@media screen and (max-width: 400px) {
+  .gallery-collection {
+    max-width: 90%;
+  }
+
+  .heading {
+    font-size: 2rem;
+  }
+
+  .gallery-photos {
+    transform: translate(0, -25px);
+  }
+
+  .img-download,
+  .img-delete {
+    font-size: 0.75em;
+    padding: 5px 10px;
+    margin: 0 5px;
   }
 }
