--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,6 +29,7 @@ body {
 
 #drive {
   width: max(80%, 20%);
+  height: max(90%, 20%);
   /* background-image: url("https://wallpapers.com/images/hd/macbook-pro-firewatch-sunrise-oei9rpkmlhhabaay.jpg"); */
   background-image: url("../img/indexbg.webp");
   background-size: cover;
@@ -60,15 +61,14 @@ header {
   transition: all 4s ease;
   transition-delay: 3s;
   /* pointer-events: none; */
-  background: transparent !important;
-  margin: 10px;
 }
 .handwriting .purna-svg {
   position: relative;
   width: 100%;
   height: 100%;
   transform: translate(-5%);
-  background: transparent !important;
+  margin-bottom: -5px;
+  padding: 10px;
 }
 .handwriting .purna-svg .text {
   stroke: #000;
@@ -92,10 +92,12 @@ header {
 }
 
 #drive form {
-  height: min(100vh, 75vh);
+  /* height: min(100vh, 75vh); */
+  height: 88%;
   display: flex;
-  flex-direction: column;
   align-items: center;
+  justify-content: center;
+  flex-direction: column;
   cursor: pointer;
   border: 2px dashed var(--font_clr);
   border-radius: 10px;
@@ -113,14 +115,14 @@ form :where(i, p) {
   color: var(--font_clr);
 }
 
-form .fa-cloud-arrow-up {
-  margin: 18vh 0 0 0;
-  font-size: 15rem;
-  margin-bottom: 20px;
+form i svg {
+  /* margin: 10vh 0 0 0; */
+  /* margin-top: 70px; */
   animation: fly 0.6s ease-in-out infinite alternate;
 }
 
 form p {
+  margin-top: -70px;
   font-size: 1.5rem;
   animation: fly 0.6s ease-in-out infinite alternate;
 }
@@ -135,13 +137,36 @@ form p {
   }
 }
 
+@keyframes slide-right {
+  0% {
+    transform: translateY(0);
+  }
+
+  to {
+    transform: translateY(-1px);
+  }
+}
+
 @media screen and (max-width: 498px) {
-  form .fa-cloud-arrow-up {
+  #drive {
+    height: 75%;
+  }
+  #drive form {
+    height: 85%;
+  }
+  form i {
     font-size: 8em;
   }
 
   form p {
-    font-size: 1em;
+    font-size: 1.5em;
+    width: 60%;
+    text-align: center;
+  }
+  form {
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 }
 
