--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -1,4 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
+:root {
+  --clr: #6783fd;
+}
 * {
   margin: 0;
   padding: 0;
@@ -71,9 +74,18 @@ body {
   height: 70px;
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
-  background: #f00;
   background: radial-gradient(#ccc, #666, #222);
   z-index: 10;
+}
+.slider {
+  background: radial-gradient(#ccc, #666, #222);
+  width: 110px;
+  height: 5px;
+  border-radius: 10px;
+  position: absolute;
+  bottom: 13px;
+  left: 95px;
+  opacity: 0.5;
 }
 .island_popup {
   position: absolute;
@@ -86,6 +98,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  z-index: 1;
 }
 .island_popup:hover {
   width: 200px;
@@ -172,8 +185,9 @@ body {
 /* For Form */
 .main {
   width: 350px;
-  height: 500px;
+  /* height: 500px; */
   overflow: hidden;
+  position: relative;
 }
 #check {
   display: none;
@@ -188,19 +202,20 @@ body {
   font-size: 2.3em;
   /* text-transform: uppercase;
   letter-spacing: 2px; */
+  margin: 60px auto;
   justify-content: center;
   display: flex;
-  margin: 60px;
   font-weight: bold;
   cursor: pointer;
   transition: 0.5s ease-in-out;
 }
 .inputBox {
   position: relative;
+  background: transparent;
 }
 .inputBox input {
-  background: #e0dede;
-  /* background: transparent; */
+  /* background: #e0dede; */
+  background: transparent;
   display: flex;
   justify-content: center;
   margin: 20px auto;
@@ -210,13 +225,13 @@ body {
   /* border-radius: 5px; */
   font-size: 1rem;
   font-weight: 600;
-  /* border-bottom: solid 2px #ccc; */
+  border-bottom: solid 2px #aaa;
 }
 .inputBox span {
   position: absolute;
   top: 20%;
   left: 10%;
-  color: #ccc;
+  color: #aaa;
   padding: 2px;
   /* border-radius: 5px; */
   transition: all 400ms ease;
@@ -224,11 +239,11 @@ body {
   pointer-events: none;
 }
 .inputBox input:focus {
-  border-bottom: solid 1px #000;
+  border-bottom: solid 2.5px #000;
 }
 .inputBox input:focus ~ span,
 .inputBox input:valid ~ span {
-  transform: translateY(-30px);
+  transform: translateY(-25px);
   font-size: 0.75rem;
   font-weight: 600;
   color: #000;
@@ -241,7 +256,12 @@ body {
 }
 .login .inputBox input {
   background: transparent;
-  border-bottom: solid 1px #ccc;
+  border-bottom: solid 2px #ccc;
+  color: #fff;
+}
+.login .inputBox input:focus {
+  background: transparent;
+  border-bottom: solid 2.5px #fff;
   color: #fff;
 }
 .login .inputBox input:valid ~ span,
@@ -286,7 +306,7 @@ body {
   background-color: transparent;
   outline: solid 2px #573b8a;
   color: #573b8a;
-  margin-top: 0px;
+  margin-top: 35px;
 }
 .signup-btn:hover {
   background: #573b8a;
@@ -302,22 +322,37 @@ body {
 .login-btn:active {
   transform: scale(0.9);
 }
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #000;
+  opacity: 0;
+  height: 100%;
+  pointer-events: none;
+  transition: 0.8s ease-in-out;
+}
+#check:checked ~ .overlay {
+  opacity: 0.75;
+}
 .signup {
   height: 460px;
   background: #eee;
-  /* backdrop-filter: blur(50px); */
-  border-radius: 60% / 10%;
-  transform: translateY(-180px);
+  /* backdrop-filter: blur(10px); */
+  border-radius: 2rem;
+  transform: translateY(-190px);
   transition: 0.8s ease-in-out;
 }
 .signup label {
   color: #573b8a;
-  transform: scale(0.6);
-  margin-bottom: -15px;
+  transform: scale(0.65);
+  margin-bottom: -12px;
+  padding: 5px;
 }
 
 #check:checked ~ .signup {
-  transform: translateY(-500px);
+  transform: translateY(-560px);
 }
 #check:checked ~ .signup label {
   transform: scale(1);
@@ -370,14 +405,218 @@ body {
 }
 @keyframes lock {
   0% {
-      transform: translateY(-2px)
+    transform: translateY(-2px);
   }
 
   to {
-      transform: translateY(0)
+    transform: translateY(0);
   }
 }
 
 .action svg {
   transform: translate(0, -10px);
+}
+
+#preloader {
+  background-color: #313131;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: 9999;
+  transform: scale(2);
+}
+.loader {
+  width: 130px;
+  height: 170px;
+  position: relative;
+  font-family: inherit;
+  inset: 0;
+  /* position: fixed; */
+  top: calc(50% - 150px);
+  left: calc(50% - 60px);
+}
+
+.loader::before,
+.loader::after {
+  content: "";
+  width: 0;
+  height: 0;
+  position: absolute;
+  bottom: 30px;
+  left: 15px;
+  z-index: 1;
+  border-left: 50px solid transparent;
+  border-right: 50px solid transparent;
+  border-bottom: 20px solid #fff;
+  transform: scale(0);
+  transition: all 0.2s ease;
+}
+
+.loader::after {
+  border-right: 15px solid transparent;
+  border-bottom: 20px solid #fff;
+}
+
+.loader .getting-there {
+  width: 120%;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  left: -7%;
+  font-size: 1rem;
+  letter-spacing: 4px;
+  text-transform: uppercase;
+  color: var(--clr);
+}
+
+.loader .binary {
+  width: 100%;
+  height: 140px;
+  display: block;
+  color: var(--clr);
+  position: absolute;
+  top: 0;
+  left: 15px;
+  z-index: 2;
+  overflow: hidden;
+}
+
+.loader .binary::before,
+.loader .binary::after {
+  font-family: "Lato";
+  font-size: 24px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+}
+
+.loader .binary:nth-child(1)::before {
+  content: "P";
+  animation: a 1.1s linear infinite;
+}
+
+.loader .binary:nth-child(1)::after {
+  content: "u";
+  animation: b 1.3s linear infinite;
+}
+
+.loader .binary:nth-child(2)::before {
+  content: "r";
+  animation: c 0.9s linear infinite;
+}
+
+.loader .binary:nth-child(2)::after {
+  content: "n";
+  animation: d 0.7s linear infinite;
+}
+
+.loader .binary:nth-child(3)::before {
+  content: "a";
+  animation: c 1.7s linear infinite;
+}
+
+.loader .binary:nth-child(3)::after {
+  content: "a";
+  animation: d 1.5s linear infinite;
+}
+
+.loader.JS_on::before,
+.loader.JS_on::after {
+  transform: scale(1.1);
+}
+
+@-webkit-keyframes a {
+  0% {
+    transform: translate(30px, 0) rotate(30deg);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translate(30px, 150px) rotate(-50deg);
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes b {
+  0% {
+    transform: translate(50px, 0) rotate(-40deg);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translate(40px, 150px) rotate(80deg);
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes c {
+  0% {
+    transform: translate(70px, 0) rotate(10deg);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translate(60px, 150px) rotate(70deg);
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes d {
+  0% {
+    transform: translate(30px, 0) rotate(-50deg);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translate(45px, 150px) rotate(30deg);
+    opacity: 1;
+  }
+}
+@keyframes a {
+  0% {
+    transform: translate(30px, 0) rotate(30deg);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translate(30px, 150px) rotate(-50deg);
+    opacity: 1;
+  }
+}
+
+@keyframes b {
+  0% {
+    transform: translate(50px, 0) rotate(-40deg);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translate(40px, 150px) rotate(80deg);
+    opacity: 1;
+  }
+}
+
+@keyframes c {
+  0% {
+    transform: translate(70px, 0) rotate(10deg);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translate(60px, 150px) rotate(70deg);
+    opacity: 1;
+  }
+}
+
+@keyframes d {
+  0% {
+    transform: translate(30px, 0) rotate(-50deg);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translate(45px, 150px) rotate(30deg);
+    opacity: 1;
+  }
 }
