--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -2,9 +2,11 @@
 
 :root {
   font-size: 10px;
+  --clr: #6783fd;
 }
 ::-webkit-scrollbar {
-  width: 0.75vw;
+  width: 0vw;
+  height: 0;
 }
 ::-webkit-scrollbar-thumb {
   background-color: #8b8f8b;
@@ -30,13 +32,6 @@ body {
   background-color: #fafafa;
 }
 
-.gallery-collection {
-  /* max-width: 130rem; */
-  max-width: 70%;
-  margin: 0 auto;
-  /* padding: 0 2rem 2rem; */
-}
-
 .heading {
   font-family: "Montserrat", Arial, sans-serif;
   font-size: 4rem;
@@ -49,112 +44,340 @@ body {
   color: #1a1a1a;
 }
 
-.gallery {
-  display: flex;
-  flex-wrap: wrap;
-  margin: -1rem -1rem;
+.slider-container {
+  position: relative;
+  /* max-width: 800px; */
+  max-width: 70%;
+  margin: 0 auto;
 }
 
-.gallery-item {
-  /* flex: 1 0 24rem; */
-  box-shadow: 0.3rem 0.4rem 0.4rem rgba(0, 0, 0, 0.4);
+.slider-wrapper {
+  display: flex;
+}
+
+.slider-image {
+  max-width: 100%;
+  /* height: auto; */
+  margin: 0 auto;
+  overflow: hidden;
+  transition: transform 400ms ease-out;
+}
+
+/* .slider-image:hover {
+  transform: scale(1.05);
+} */
+
+.slider-controls {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.slider-control-left,
+.slider-control-right {
+  cursor: pointer;
+  padding: 16px;
+  color: white;
+  font-size: 30px;
+  user-select: none;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.slider-control-left {
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+.slider-control-right {
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+
+.slider-control-left:hover,
+.slider-control-right:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+@media only screen and (max-width: 600px) {
+  .slider-control-left,
+  .slider-control-right {
+    font-size: 20px;
+  }
+  .slider-container {
+    max-width: 95%;
+  }
+}
+
+.button-background {
+  position: absolute;
+  background-color: #000000be;
+  width: 100%;
+  height: 50px;
+  transform: translate(0, -50px);
+  opacity: 0;
+  transition: 0.5s;
+  display: flex;
+  z-index: 9;
+  cursor: default;
+}
+.slider-container .image:hover .button-background {
+  opacity: 1;
+}
+.slider-container .image:hover button {
+  opacity: 1;
+}
+/* .slider-container:hover .button-background {
+  opacity: 1;
+} */
+.slider-container:hover button {
+  opacity: 1;
+}
+.button-background button {
+  padding: 10px;
+  border: 0;
+  background-color: transparent;
+  cursor: pointer;
+  z-index: 9;
+  margin-top: -10px;
+  opacity: 0;
+  transition: 0.25s;
+}
+.download {
+  filter: drop-shadow(0 0 0.75rem #00ff00);
+}
+.delete {
+  filter: drop-shadow(0 0 0.75rem #ff0000);
+}
+.download:hover,
+.delete:hover {
+  transform: scale(1.2);
+}
+
+@keyframes slide-right {
+  0% {
+    transform: translateY(0);
+  }
+
+  to {
+    transform: translateY(1px);
+  }
+}
+@keyframes rotate-tr {
+  0% {
+    transform: rotate(0);
+  }
+
+  to {
+    transform: rotate(20deg);
+  }
+}
+
+/* FOR PRELOADER */
+
+#preloader {
+  background-color: #313131;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: 9999;
+  transform: scale(2);
+  font-family: "Montserrat", Arial, sans-serif;
+}
+.loader {
+  width: 130px;
+  height: 170px;
+  position: relative;
+  font-family: inherit;
+  inset: 0;
+  /* position: fixed; */
+  top: calc(50% - 150px);
+  left: calc(50% - 60px);
+}
+
+.loader::before,
+.loader::after {
+  content: "";
+  width: 0;
+  height: 0;
+  position: absolute;
+  bottom: 30px;
+  left: 15px;
+  z-index: 1;
+  border-left: 50px solid transparent;
+  border-right: 50px solid transparent;
+  border-bottom: 20px solid #fff;
+  transform: scale(0);
+  transition: all 0.2s ease;
+}
+
+.loader::after {
+  border-right: 15px solid transparent;
+  border-bottom: 20px solid #fff;
+}
+
+.loader .getting-there {
+  width: 120%;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  left: -7%;
+  font-size: 1rem;
+  letter-spacing: 4px;
+  text-transform: uppercase;
+  color: var(--clr);
+}
+
+.loader .binary {
+  width: 100%;
+  height: 140px;
+  display: block;
+  color: var(--clr);
+  position: absolute;
+  top: 0;
+  left: 15px;
+  z-index: 2;
   overflow: hidden;
 }
 
-.gallery-item img,
-.gallery-image {
-  display: block;
-  width: 100%;
-  object-fit: cover;
-  transition: transform 400ms ease-out;
-  z-index: 0;
-  /* overflow: hidden; */
+.loader .binary::before,
+.loader .binary::after {
+  font-family: "Lato";
+  font-size: 24px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
 }
 
-.gallery-item img:hover,
-.gallery-image:hover {
-  transform: scale(1.15);
+.loader .binary:nth-child(1)::before {
+  content: "P";
+  animation: a 1.1s linear infinite;
 }
 
-@supports (display: grid) {
-  .gallery {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(24rem, 1fr));
-    grid-gap: 2rem;
-  }
-
-  .gallery,
-  .gallery-item {
-    margin: 0;
-  }
+.loader .binary:nth-child(1)::after {
+  content: "u";
+  animation: b 1.3s linear infinite;
 }
 
-.gallery-photos {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transform: translate(0, -50px);
+.loader .binary:nth-child(2)::before {
+  content: "r";
+  animation: c 0.9s linear infinite;
 }
 
-.img-download,
-.img-delete {
-  font-family: "Montserrat", Arial, sans-serif;
-  padding: 10px 20px;
-  margin: 0 20px;
-  font-size: 1.5em;
-  font-weight: bold;
-  text-decoration: none;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  border: none;
-  transition: 0.2s ease-in;
-  cursor: pointer;
-  z-index: 1;
+.loader .binary:nth-child(2)::after {
+  content: "n";
+  animation: d 0.7s linear infinite;
 }
-.img-download {
-  background: #008000;
-  color: #fff;
+
+.loader .binary:nth-child(3)::before {
+  content: "a";
+  animation: c 1.7s linear infinite;
 }
-.img-download:hover {
-  background-color: #fff;
-  outline: solid 2px #008000;
-  color: #008000;
+
+.loader .binary:nth-child(3)::after {
+  content: "a";
+  animation: d 1.5s linear infinite;
+}
+
+.loader.JS_on::before,
+.loader.JS_on::after {
   transform: scale(1.1);
-  box-shadow: 1px 7px 43px 15px rgba(0, 139, 16, 0.85);
-}
-.img-delete {
-  color: #ff0000;
-  background: transparent;
-  outline: solid 2px #ff0000;
-}
-.img-delete:hover {
-  background: #fff;
-  color: #ff0000;
-  transform: scale(1.1);
-  box-shadow: 1px 7px 43px 15px rgba(139, 0, 0, 0.85);
-}
-.img-download:active,
-.img-delete:active {
-  transform: scale(0.9);
 }
 
-@media screen and (max-width: 400px) {
-  .gallery-collection {
-    max-width: 90%;
+@-webkit-keyframes a {
+  0% {
+    transform: translate(30px, 0) rotate(30deg);
+    opacity: 0;
   }
 
-  .heading {
-    font-size: 2rem;
+  100% {
+    transform: translate(30px, 150px) rotate(-50deg);
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes b {
+  0% {
+    transform: translate(50px, 0) rotate(-40deg);
+    opacity: 0;
   }
 
-  .gallery-photos {
-    transform: translate(0, -25px);
+  100% {
+    transform: translate(40px, 150px) rotate(80deg);
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes c {
+  0% {
+    transform: translate(70px, 0) rotate(10deg);
+    opacity: 0;
   }
 
-  .img-download,
-  .img-delete {
-    font-size: 0.75em;
-    padding: 5px 10px;
-    margin: 0 5px;
+  100% {
+    transform: translate(60px, 150px) rotate(70deg);
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes d {
+  0% {
+    transform: translate(30px, 0) rotate(-50deg);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translate(45px, 150px) rotate(30deg);
+    opacity: 1;
+  }
+}
+@keyframes a {
+  0% {
+    transform: translate(30px, 0) rotate(30deg);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translate(30px, 150px) rotate(-50deg);
+    opacity: 1;
+  }
+}
+
+@keyframes b {
+  0% {
+    transform: translate(50px, 0) rotate(-40deg);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translate(40px, 150px) rotate(80deg);
+    opacity: 1;
+  }
+}
+
+@keyframes c {
+  0% {
+    transform: translate(70px, 0) rotate(10deg);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translate(60px, 150px) rotate(70deg);
+    opacity: 1;
+  }
+}
+
+@keyframes d {
+  0% {
+    transform: translate(30px, 0) rotate(-50deg);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translate(45px, 150px) rotate(30deg);
+    opacity: 1;
   }
 }
