--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -1,11 +1,11 @@
 @import url(https://fonts.googleapis.com/css?family=Montserrat:500);
 
 :root {
-  font-size: 10px;
+  /* font-size: 10px; */
   --clr: #6783fd;
 }
 ::-webkit-scrollbar {
-  width: 0vw;
+  width: 0.75vw;
   height: 0;
 }
 ::-webkit-scrollbar-thumb {
@@ -25,137 +25,177 @@
 *,
 *::before,
 *::after {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
 body {
   background-color: #fafafa;
+  font-family: Arial, sans-serif;
 }
 
-.heading {
-  font-family: "Montserrat", Arial, sans-serif;
-  font-size: 4rem;
-  font-weight: 500;
-  /* line-height: 1.5; */
-  text-align: center;
-  padding: 1rem 0;
-  margin-bottom: 0;
-  /* margin: -20px 0; */
-  color: #1a1a1a;
-}
-
-.slider-container {
-  position: relative;
-  /* max-width: 800px; */
-  max-width: 70%;
-  margin: 0 auto;
-}
-
-.slider-wrapper {
+header {
   display: flex;
+  align-items: center;
+  justify-content: center;
+  /* background-color: var(--clr); */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  /* position: sticky;
+  top: 0;
+  z-index: 99; */
 }
 
-.slider-image {
-  max-width: 100%;
-  /* height: auto; */
-  margin: 0 auto;
-  overflow: hidden;
-  transition: transform 400ms ease-out;
-}
-
-/* .slider-image:hover {
-  transform: scale(1.05);
-} */
-
-.slider-controls {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-}
-
-.slider-control-left,
-.slider-control-right {
+#drive header h2 {
   cursor: pointer;
-  padding: 16px;
-  color: white;
-  font-size: 30px;
-  user-select: none;
-  background-color: rgba(0, 0, 0, 0.5);
+  /* backdrop-shadow: 0 0 20px #000; */
+  filter: drop-shadow(0 0 10px #000);
+  /* padding-top: 1em; */
 }
-
-.slider-control-left {
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
+.handwriting {
+  width: 16rem;
+  height: 5rem;
+  transition: all 4s ease;
+  transition-delay: 3s;
+  /* pointer-events: none; */
 }
-
-.slider-control-right {
-  border-top-left-radius: 5px;
-  border-bottom-left-radius: 5px;
-}
-
-.slider-control-left:hover,
-.slider-control-right:hover {
-  background-color: rgba(0, 0, 0, 0.8);
-}
-
-@media only screen and (max-width: 600px) {
-  .slider-control-left,
-  .slider-control-right {
-    font-size: 20px;
-  }
-  .slider-container {
-    max-width: 95%;
-  }
-}
-
-.button-background {
-  position: absolute;
-  background-color: #000000be;
+.handwriting .purna-svg {
+  position: relative;
   width: 100%;
-  height: 50px;
-  transform: translate(0, -50px);
-  opacity: 0;
-  transition: 0.5s;
+  height: 100%;
+  /* transform: translate(-5%); */
+  margin-bottom: -5px;
+  padding: 10px 0;
+}
+.handwriting .purna-svg .text {
+  stroke: #000;
+  stroke-dasharray: 9000;
+  stroke-dashoffset: 9000;
+  -webkit-animation: animate 5s linear 1 forwards;
+  animation: animate-text 5s linear 1 forwards;
+}
+.handwriting .purna-svg .text:hover {
+  stroke: #000;
+}
+@-webkit-keyframes animate-text {
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+@keyframes animate-text {
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+
+/* Gallery Styles */
+.gallery {
   display: flex;
-  z-index: 9;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 20px;
+  /* width: 90%; */
+  margin: 0 auto;
+}
+
+.gallery-item {
+  position: relative;
+  flex: 0 0 calc(33.33% - 10px);
+  margin-bottom: 20px;
+}
+
+@media screen and (max-width: 768px) {
+  .gallery-item {
+    flex-basis: calc(50% - 10px);
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .gallery-item {
+    flex-basis: calc(100% - 10px);
+  }
+}
+
+.gallery-item img,
+.gallery-item video {
+  display: block;
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
+.gallery-item:hover .gallery-item-type {
+  transform: translateY(0);
+  background-color: rgba(0, 0, 0, 0.5);
+  opacity: 1;
+}
+
+.gallery-item-type {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  color: #fff;
+  padding: 5px 10px;
+  font-size: 1rem;
+  border-radius: 1px;
+  text-transform: uppercase;
+  transform: translateY(-100%);
+  opacity: 0;
+  transition: all 0.3s ease;
+}
+
+.gallery-item:hover .gallery-item-download,
+.gallery-item:hover .gallery-item-delete{
+  transform: translateY(0);
+  opacity: 1;
+}
+
+.gallery-item-download,
+.gallery-item-delete {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  color: #fff;
+  /* padding: 10px 15px; */
+  /* font-size: 1rem; */
+  text-decoration: none;
+  text-transform: uppercase;
+  transform: translateY(100%);
+  opacity: 0;
+  transition: all 0.25s ease-in-out;
+  z-index: 99;
+  width: 100%;
+  background-color: #000000be;
   cursor: default;
 }
-.slider-container .image:hover .button-background {
-  opacity: 1;
-}
-.slider-container .image:hover button {
-  opacity: 1;
-}
-/* .slider-container:hover .button-background {
-  opacity: 1;
-} */
-.slider-container:hover button {
-  opacity: 1;
-}
-.button-background button {
-  padding: 10px;
-  border: 0;
-  background-color: transparent;
+.gallery-item-download svg {
+  filter: drop-shadow(0 0 10px #03c03c);
   cursor: pointer;
-  z-index: 9;
-  margin-top: -10px;
-  opacity: 0;
-  transition: 0.25s;
 }
-.download {
-  filter: drop-shadow(0 0 0.75rem #00ff00);
+.gallery-item-delete svg {
+  filter: drop-shadow(0 0 10px #ff0000);
+  cursor: pointer;
 }
-.delete {
-  filter: drop-shadow(0 0 0.75rem #ff0000);
+iframe[resize] {
+  resize: both;
 }
-.download:hover,
-.delete:hover {
-  transform: scale(1.2);
+@media screen and (max-width: 480px) {
+  .gallery-item-type {
+    font-size: 12px;
+    padding: 2px 5px;
+    background-color: rgba(0, 0, 0, 0.5);
+    opacity: 1;
+  }
+  .gallery-item-download {
+    /* font-size: 0.5rem; */
+    background-color: transparent;
+    opacity: 1;
+    transform: translateY(0);
+  }
+  .gallery-item-download:hover {
+    transform: translateY(0) scale(1.1);
+  }
 }
-
 @keyframes slide-right {
   0% {
     transform: translateY(0);
@@ -175,7 +215,63 @@ body {
   }
 }
 
-/* FOR PRELOADER */
+/* ========== USING GRID ========== */
+/* .gallery {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-gap: 20px;
+  padding: 20px;
+}
+
+.gallery-item {
+  position: relative;
+}
+
+.gallery-item img,
+.gallery-item video {
+  display: block;
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
+.gallery-item:hover .gallery-item-type {
+  transform: translateY(0);
+}
+
+.gallery-item-type {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: #fff;
+  padding: 5px 10px;
+  font-size: 14px;
+  text-transform: uppercase;
+  transform: translateY(-100%);
+  transition: transform 0.3s ease;
+}
+
+@media screen and (max-width: 768px) {
+  .gallery {
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .gallery {
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    grid-gap: 10px;
+    padding: 10px;
+  }
+
+  .gallery-item-type {
+    font-size: 12px;
+    padding: 2px 5px;
+  }
+} */
+
+/* ========== PRELOADER ========== */
 
 #preloader {
   background-color: #313131;
@@ -381,3 +477,20 @@ body {
     opacity: 1;
   }
 }
+/* 
+.download {
+  position: absolute;
+  z-index: 9;
+  padding: 5px;
+  border: 0;
+  background-color: #00ff00;
+  color: #fff;
+  text-decoration: none;
+  transition: 0.25s;
+  display: flex;
+  margin: 0 60px;
+}
+.download:hover {
+  transform:scale(1.02);
+  filter: drop-shadow(0 0 0.75rem #00ff00);
+} */
