--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -1,6 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
 :root {
-  --clr: #6783fd;
+  /* --clr: #6783fd; */
+  --clr: #5f54d6;
+  /* --clr: rgb(113, 65, 215); */
+  --white:#f5f5f7;
 }
 * {
   margin: 0;
@@ -13,7 +16,10 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background: #fff;
+  background: var(--white);
+  /* background-image: linear-gradient(to bottom, #bfbfbf 0%, #f5f5f7 100%); */
+  /* background-image: linear-gradient(to top, #d5d4d0 0%, #d5d4d0 1%, #eeeeec 31%, #efeeec 75%, #e9e9e7 100%); */
+
 }
 .box {
   position: relative;
@@ -33,9 +39,11 @@ body {
   position: absolute;
   inset: 3px;
   /* background: url("https://i.pinimg.com/originals/11/31/75/11317515c5e2b8f45bf2908787950fb6.png"); */
-  background: url("../img/formbg.webp");
-  background-size: cover;
-  background-position: center;
+  /* background: url("../img/formbg.webp"); */
+  /* background-image: linear-gradient(to bottom, #434343 0%, black 100%); */
+  background-image: linear-gradient(to right, #0f0c29, #302b63, #24243e);
+  /* background-size: cover;
+  background-position: center; */
   border-radius: 48px;
   border: 10px solid #000;
   display: flex;
@@ -118,7 +126,7 @@ body {
   line-height: 25px;
 }
 .content p {
-  color: #fff;
+  color: var(--white);
   font-size: 0.9em;
   cursor: default;
   visibility: hidden;
@@ -132,7 +140,7 @@ body {
 .action {
   position: relative;
   top: 5px;
-  color: #fff;
+  color: var(--white);
   display: flex;
   gap: 12px;
   transition: 0.5s;
@@ -161,7 +169,7 @@ body {
   position: relative;
   width: 0;
   height: 0;
-  background: #fff;
+  background: var(--white);
   border-radius: 50%;
   overflow: hidden;
   transition: 0.5s;
@@ -198,7 +206,7 @@ body {
   height: 100%;
 }
 .label-title {
-  color: #fff;
+  color: var(--white);
   font-size: 2.3em;
   /* text-transform: uppercase;
   letter-spacing: 2px; */
@@ -257,17 +265,17 @@ body {
 .login .inputBox input {
   background: transparent;
   border-bottom: solid 2px #ccc;
-  color: #fff;
+  color: var(--white);
 }
 .login .inputBox input:focus {
   background: transparent;
-  border-bottom: solid 2.5px #fff;
-  color: #fff;
+  border-bottom: solid 2.5px var(--white);
+  color: var(--white);
 }
 .login .inputBox input:valid ~ span,
 .login .inputBox input:focus ~ span {
   background: #000;
-  color: #fff;
+  color: var(--white);
   transform: translateY(-25px);
   background: transparent;
 }
@@ -289,13 +297,13 @@ body {
   cursor: pointer;
 }
 .login-btn {
-  color: #fff;
+  color: var(--white);
   background: transparent;
-  outline: solid 2px #fff;
+  outline: solid 2px var(--white);
   margin-top: 20px;
 }
 .login-btn:hover {
-  background: #fff;
+  background: var(--white);
   color: #573b8a;
   transform: scale(1.1);
   box-shadow: 0 0 10px rgba(255, 255, 255, 0.25),
@@ -310,7 +318,7 @@ body {
 }
 .signup-btn:hover {
   background: #573b8a;
-  color: #fff;
+  color: var(--white);
   transform: scale(1.1);
   box-shadow: 0 0 10px rgba(127, 17, 224, 0.25),
     0 0 10px rgba(127, 17, 224, 0.5), 0 0 10px rgba(85, 0, 159, 0.75),
@@ -338,7 +346,7 @@ body {
 }
 .signup {
   height: 460px;
-  background: #eee;
+  background: var(--white);
   /* backdrop-filter: blur(10px); */
   border-radius: 2rem;
   transform: translateY(-190px);
@@ -377,14 +385,14 @@ body {
 }
 .checkBox span {
   /* color: #949292; */
-  color: #fff;
+  color: var(--white);
   font-size: 0.85rem;
   cursor: pointer;
   margin-left: 5px;
 }
 .checkBox a {
   /* color: #573b8a; */
-  color: #fff;
+  color: var(--white);
   font-size: 0.85rem;
   cursor: pointer;
   margin-left: 70px;
@@ -418,7 +426,9 @@ body {
 }
 
 #preloader {
-  background-color: #313131;
+  background-color: #1d1d1f;
+  background-image: linear-gradient(to bottom, #434343 0%, black 100%);
+
   width: 100%;
   height: 100%;
   position: fixed;
@@ -447,14 +457,14 @@ body {
   z-index: 1;
   border-left: 50px solid transparent;
   border-right: 50px solid transparent;
-  border-bottom: 20px solid #fff;
+  border-bottom: 20px solid var(--white);
   transform: scale(0);
   transition: all 0.2s ease;
 }
 
 .loader::after {
   border-right: 15px solid transparent;
-  border-bottom: 20px solid #fff;
+  border-bottom: 20px solid var(--white);
 }
 
 .loader .getting-there {
