Update components and Add README.md

--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -94,6 +94,13 @@ body {
   padding: 20px;
   /* width: 90%; */
   margin: 0 auto;
+  flex-direction: column;
+}
+@media screen and (min-width: 481px) {
+  .gallery {
+    display: flex;
+    flex-direction: row;
+  }
 }
 
 .gallery-item {
@@ -108,7 +115,7 @@ body {
   }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 481px) {
   .gallery-item {
     flex-basis: calc(100% - 10px);
   }
@@ -495,9 +502,6 @@ iframe[resize] {
   filter: drop-shadow(0 0 0.75rem #00ff00);
 } */
 
-
-
-
 header {
   position: relative;
   /* position: sticky;
@@ -509,15 +513,12 @@ header {
   font-family: sans-serif;
   margin: 10px;
   margin-bottom: 30px;
-
-
-  
 }
 
 .navigation {
   position: relative;
   background-color: #535353;
-  width: 450px;
+  width: min(100%, 450px);
   height: 70px;
   /* margin: 0 auto; */
   border-radius: 10px;
@@ -526,7 +527,6 @@ header {
   align-items: center;
   justify-content: center;
   margin: 0 auto;
-
 }
 .navigation ul {
   display: flex;
